--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Admitted Students Decision Day 
+title: Computer Science Mock Class 
 # the base hostname & protocol for your site
 url: "http://gdancik.github.io/ASDD" 
 baseurl: "/ASDD"
 # Build settings
 markdown: kramdown
 timezone: America/New_York
-course: Admited Students Decision Day
+course: Computer Science Mock Class
 
